# Anomalyze

./: DOCUMENTATION.md
backend/: README.md  docker-compose.yml  index.js  package-lock.json  package.json
backend/prisma/: README.md  schema.prisma
backend/services/analytics-service/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.build.json
backend/services/auth-service/: .env.example  Dockerfile  README.md  package-lock.json  package.json
backend/services/ingestion-service/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.build.json
backend/services/ml-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/services/ml-service/data/: .gitkeep
backend/services/ml-service/models/: .gitkeep  current_model.pkl
backend/services/ml-service/src/: __init__.py  config.py  main.py
backend/services/ml-service/src/api/: __init__.py  routes.py  schemas.py
backend/services/ml-service/src/kafka/: __init__.py  consumer.py  producer.py
backend/services/ml-service/src/ml/: __init__.py  features.py  model.py  scheduler.py  training.py
backend/services/ml-service/src/models/: __init__.py  user_profile.py
backend/services/ml-service/src/repositories/: __init__.py  profile_repository.py
backend/services/ml-service/tests/: __init__.py  test_anomaly_detection.py  test_basic.py
backend/services/notification-service/: .env.example  Dockerfile  README.md  package-lock.json  (+2 more)
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.jsx  index.css
(+53 files in other folders)
