[project]
name = "anomalyze-ml-service"
version = "0.1.0"
description = "ML Service for Anomalyze - Anomaly Detection using Isolation Forest"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # ML & Data Processing
    "scikit-learn>=1.4.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "joblib>=1.3.0",  # Model serialization
    
    # Kafka
    "confluent-kafka>=2.3.0",
    
    # Redis
    "redis>=5.0.0",
    
    # PostgreSQL (async driver for persistence)
    "asyncpg>=0.29.0",
    
    # Storage (local first, S3 later)
    "boto3>=1.34.0",  # For S3/R2 later
    
    # Configuration
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # Utilities
    "httpx>=0.26.0",  # Async HTTP client
    "structlog>=24.1.0",  # Structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",  # For TestClient
    "ruff>=0.1.0",  # Linting
    "mypy>=1.8.0",  # Type checking
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
